src/app/pages/speakers/speaker-details/speaker-details.component.scss
.container {
  display: grid;
  $gap: 32px;
  grid-gap: $gap;
  padding-top: $gap / 2;
  padding-bottom: $gap / 2;

  @media (min-width: 600px) {
    grid-template-columns: 6fr 9fr;
    $gap: 64px;
    grid-gap: $gap;
    padding-top: $gap;
    padding-bottom: $gap;
  }
}

.dp {
  text-align: center;

  mat-card {
    padding: 32px;
  }
}

.img-container {
  margin: auto;
  $size: 200px;
  height: $size;
  width: $size;

  @media (min-width: 600px) {
    $size: 256px;
    height: $size;
    width: $size;
  }
}

.name {
  margin: 24px 0 12px;
}

.details {
  p {
    margin-bottom: 32px;

    &:last-child {
      margin: 0;
    }
  }
}

